# Learning_Vulkan

./: .gitattributes  .gitignore  .manifold-intel.db  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: bug1_bisection.md  hybrid_hash_svdag_plan.md  lod_session_report.md  roadmap.md  svdag_implementation_report.md  svdag_known_issues.md
docs/design/: camera_system.md  system_architecture.md
src/: add_layers.rs  bisect_progress.md  game_state.rs  graphical_core.rs  main.rs  storage.rs  test.rs  vulkan_object.rs
src/graphical_core/: buffers.rs  camera.rs  commands.rs  compute_cull.rs  cull_compact.rs  depth.rs  descriptors.rs  extra.rs  frustum.rs  gpu.rs  heightmap_atlas.rs  heightmap_pipeline.rs  heightmap_pool.rs  heightmap_tile_pipeline.rs  input.rs  instance.rs  memory.rs  mesh.rs  mesh_pipeline.rs  mesh_pool.rs  model_loading.rs  palette_buffer.rs  pipeline.rs  queue_families.rs  render_pass.rs  scene.rs  shaders.rs  svdag_pipeline.rs  svdag_pool.rs  swap_chain.rs  swapchain.rs  texture_mapping.rs  ui_pipeline.rs  vertex_buffer.rs  voxel_pool.rs  vulkan_object.rs
src/shaders/: chunk_cull.task  chunk_cull.task.spv  chunk_cull_compact.comp  chunk_cull_compact.comp.spv  cull.comp  cull.comp.spv  depth_reduce.comp  depth_reduce.comp.spv  heightmap.frag  heightmap.frag.spv  heightmap.vert  heightmap.vert.spv  heightmap_cull.comp  heightmap_cull.comp.spv  heightmap_tile.frag  heightmap_tile.frag.spv  heightmap_tile.mesh  heightmap_tile.mesh.spv  heightmap_tile.task  shader.frag  (+24 more)
(+94 files in other folders)
