[package]
name = "Vulkan-Minecraft-Clone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
glam = "0.29"
pretty_env_logger = "0.5.0"
thiserror = "1"
vulkan-rust = { path = "../vulkan_rs/vulkan-rust" }
winit = { version = "0.29.4", features = ["rwh_05"] }
image = "0.25.6"
noise = "0.9"
openxr = "0.21"

[dev-dependencies]
memoffset = "0.9"

[build-dependencies]
anyhow = "1.0"
