[package]
name = "Vulkan-Minecraft-Clone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
glam = "0.29"
pretty_env_logger = "0.5.0"
thiserror = "1"
vulkan-rust = "0.10.0"
winit = { version = "0.29.4", features = ["rwh_05"] }
image = "0.25.6"
noise = "0.9"
openxr = "0.21"
crossbeam-channel = "0.5"
lz4_flex = "0.11"
memmap2 = "0.9"

# Optimize dependencies in dev builds (noise, lz4, etc.) while keeping
# our code unoptimized for fast compilation and debug assertions.
[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
memoffset = "0.9"

[build-dependencies]
anyhow = "1.0"
